# ipchannel

./: Cargo.toml  tarpaulin.toml
src/: lib.rs  main.rs  receiver.rs  sender.rs  tests.rs
src/generic/: mod.rs
src/generic/receiver/: mod.rs  tests.rs
src/generic/sender/: mod.rs  tests.rs
src/tcp/: mod.rs
