[package]
name = "ipchannel"
version = "0.1.0"
authors = ["Maximilian Siling <mouse-art@ya.ru>"]
edition = "2018"

[dependencies]
bincode = "1.3.1"
serde = { version = "1.0.117", features = ["derive"] }
scoped_threadpool = "0.1.9"
anyhow = "1.0.33"
thiserror = "1.0.21"

[dev-dependencies]
test-case = "1.0.0"
